[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://scenes/dot/dot.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 522, 311.5 )

[node name="Main" type="Node2D"]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
script = ExtResource( 1 )

[node name="FirstDot" parent="." instance=ExtResource( 2 )]
position = Vector2( 144, 92 )

[node name="DotContainer" type="Node2D" parent="."]

[node name="LineContainer" type="Node2D" parent="."]

[node name="ClickableArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickableArea2D"]
position = Vector2( 512, 301.5 )
shape = SubResource( 1 )

[node name="InstructionLabel" type="Label" parent="."]
margin_left = -12.0
margin_top = 581.0
margin_right = 299.0
margin_bottom = 612.0
text = "Click anywhere to add dots and draw lines.
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 945.0
margin_top = 565.0
margin_right = 1015.0
margin_bottom = 596.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="ClickableArea2D" to="." method="_on_Area2D_input_event"]
[connection signal="pressed" from="ResetButton" to="." method="_on_Button_pressed"]
